syntax = "proto3";
package network.participation.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ignite/network/x/participation/types";

message UsedAllocations {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string numAllocations = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (cosmos_proto.scalar) = "cosmos.Int"
  ];
}
